# rogue

./: .gitignore  analysis_cache.json  config.json  create_sphinx_docs.py  cuntinyou.py  decocheck.py  generate_txt_docs.py  project_improver.md  project_setup.py  pyproject.toml  search_for_old_remnants.sh  split_modules.py
.github/workflows/: sphinx.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  core.rst  index.rst  installation.rst  modules.rst  tools.rst  usage.rst
examples/: tasks.json
github/workflows/: sphinx.yml
project_setup_split/src/project_setup/: __init__.py  ai_manager.py  main.py  poetry_project_manager.py  project_builder.py  project_config.py
scripts/: rebuild  start_tasks.sh
src/: __init__.py  project_config.py
src/ai_core/: __init__.py  ai_manager.py  main.py  project_config.py  thoughts_manager.py
src/project_manager_core/: poetry_project_manager.py  project_builder.py
src/tools/: code_modifier.py  exceptions.py  file_watcher.py  fix_imports.py  quick.py  quick_tasks.py  system_health.py
src/tools/git/: patch_manager.py
src/tools/project_improver/: __init__.py  analyzer.py  cache.py  documentation.py  testing.py
tests/: test_gemini_integration.py  test_thoughts.py
tests/tools/git/: test_patch_manager.py
